aligned my menu items in the correct order using other CSS options not mentioned on the tutorials

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,3 +21,21 @@ h1, h2 {
     float: left;
     font-size: 280%;
 }
+/* navigation links */
+
+#menu {
+     font-size: 110%;
+     letter-spacing: 4px;
+}
+
+#menu{
+    float:right;
+}
+#menu li {
+    float: left;
+    list-style-type: none;
+    margin-right: 30px;
+    
+}
+   
+
